tdf#155465 doc export: handle para last line - justify

This was already OK for import in OOo 3.3,
but never exported. DOCX export landed in 2019 (no bug report).

No existing unit tests matched for DOC.

make CppunitTest_sw_ww8export4 \
    CPPUNIT_TEST_NAME=testTdf155465_paraAdjustDistribute

Change-Id: Iaea149c21259fe2a9002c8ce7c023327bbd13746
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152199
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152243